--- a/HTML/index.html
+++ b/HTML/index.html
@@ -21,7 +21,7 @@
 
     <div ng-view></div>
 
-    <!--<script src="lib/angular/angular.js"></script>-->
+    <script src="lib/angular/angular.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
