--- a/HTML/dividendscout.html
+++ b/HTML/dividendscout.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html>
-<html lang="en" ng-app="divApp">
+<html lang="en" data-ng-app="divApp">
 <head>
     <meta charset="utf-8">
     <title>Dividend Finder</title>
@@ -14,6 +13,8 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <!-- Custom CSS -->
+
+    <script src="js/divscout.js"></script>
     <style>
     body {
         padding-top: 70px;
@@ -58,6 +59,9 @@
                     <li>
                         <a href="#">ETFs</a>
                     </li>
+                    <li>
+                        <a href="#">Preferred</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -65,22 +69,20 @@
         <!-- /.container -->
     </nav>
 
+    <div class="page-header">
+        <img id="div-type-image" src="http://placehold.it/50x50" align="left" hspace="6">
 
-<div class="row">
-    <div class="col-md-1">
-        <img id="div-type-image" src="http://placehold.it/50x50">
+        <h1 id="page_title">S&P 500 <small id="sub_title">Large Cap Dividend Stocks</small></h1>
     </div>
-    <div class="col-md-11">
-        <h3 id="title_header" class="text-uppercase">S&P 500</h3>
-    </div>
-</div>
 
-<div class="row">
+<div class="row" data-ng-controller="DivendScoutController as divdata">
     <div class="col-md-12 table-responsive">
-    <table class="table table-striped table-bordered table-hover">
+    <table class="table table-striped table-bordered table-hover table-condensed">
       <thead>
         <tr>
             <th>Symbol</th>
+            <th>Sector</th>
+            <th>Industry</th>
             <th>Price</th>
             <th>Low</th>
             <th>High</th>
@@ -89,74 +91,28 @@
             <th>W/O Bonus</th>
             <th>EPS</th>
             <th>Payout</th>
+            <th>Div</th>
             <th>Warn</th>
             <th>Adjusted</th>
-            <th>Etc</th>
             <th>Etc</th>
             <th>Etc</th>
         </tr>
       </thead>
       <tbody>
-        <tr>
-            <td>TGH</td>
-            <td>$22</td>
-            <td>$21</td>
-            <td>$35</td>
-            <td>3%</td>
-            <td>4%</td>
-            <td>2.5%</td>
-            <td>$4</td>
-            <td>40%</td>
-            <td>False</td>
-            <td>4.5%</td>
+        <tr data-ng-repeat="stock in divdata.stocks">
+            <td>{{stock.symbol}}</td>
+            <td>{{stock.sector}}</td>
+            <td>{{stock.industry}}</td>
             <td></td>
             <td></td>
             <td></td>
-        </tr>
-        <tr>
-            <td>TGH</td>
-            <td>$22</td>
-            <td>$21</td>
-            <td>$35</td>
-            <td>3%</td>
-            <td>4%</td>
-            <td>2.5%</td>
-            <td>$4</td>
-            <td>40%</td>
-            <td>False</td>
-            <td>4.5%</td>
             <td></td>
             <td></td>
             <td></td>
-        </tr>
-        <tr>
-            <td>TGH</td>
-            <td>$22</td>
-            <td>$21</td>
-            <td>$35</td>
-            <td>3%</td>
-            <td>4%</td>
-            <td>2.5%</td>
-            <td>$4</td>
-            <td>40%</td>
-            <td>False</td>
-            <td>4.5%</td>
             <td></td>
             <td></td>
             <td></td>
-        </tr>
-        <tr>
-            <td>TGH</td>
-            <td>$22</td>
-            <td>$21</td>
-            <td>$35</td>
-            <td>3%</td>
-            <td>4%</td>
-            <td>2.5%</td>
-            <td>$4</td>
-            <td>40%</td>
-            <td>False</td>
-            <td>4.5%</td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
