Added real time quote data. Needs improvement.

--- a/HTML/dividendscout.html
+++ b/HTML/dividendscout.html
@@ -103,11 +103,11 @@
             <td>{{stock.symbol}}</td>
             <td>{{stock.sector}}</td>
             <td>{{stock.industry}}</td>
+            <td>{{stock.last_price}}</td>
+            <td>{{stock.year_low}}</td>
+            <td>{{stock.year_high}}</td>
             <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>{{stock.projected_div}}</td>
             <td></td>
             <td></td>
             <td></td>
