Div analysis working (sort of) and added years of growth to interface

--- a/HTML/dividendscout.html
+++ b/HTML/dividendscout.html
@@ -90,6 +90,7 @@
             <th>Industry</th>
             <th>Low</th>
             <th>High</th>
+            <th>Yrs Grow</th>
             <th>EPS</th>
             <th>Payout</th>
             <th>Warn</th>
@@ -107,6 +108,7 @@
             <td>{{stock.industry}}</td>
             <td>{{stock.year_low | currency}}</td>
             <td>{{stock.year_high | currency}}</td>
+            <td>{{stock.years_div_growth | number:1}}</td>
             <td></td>
             <td></td>
             <td></td>
