--- a/HTML/dividendscout.html
+++ b/HTML/dividendscout.html
@@ -85,16 +85,16 @@
             <th>Price</th>
             <th>Dividend</th>
             <th>Yield</th>
+            <th>EPS</th>
+            <th>Payout</th>
+            <th>Adj Div</th>
+            <th>Adj Yield</th>
             <th>Yrs Div Gr</th>
             <th>Name</th>
             <th>Sector</th>
             <th>Industry</th>
             <th>Low</th>
             <th>High</th>
-            <th>EPS</th>
-            <th>Payout</th>
-            <th>Warn</th>
-            <th>Adjusted</th>
         </tr>
       </thead>
       <tbody>
@@ -103,16 +103,16 @@
             <td>{{stock.last_price | currency}}</td>
             <td>{{stock.trailing_div | currency}}</td>
             <td>{{stock.div_yield * 100.0 | number:2}}%</td>
+            <td>{{stock.eps | currency}}</td>
+            <td data-ng-class="{red: stock.payout_ratio > 0.6, black: stock.payout_ratio <= 0.6}">{{stock.payout_ratio * 100.0  | number:0}}%</td>
+            <td>{{stock.adjusted_div | currency}}</td>
+            <td>{{stock.adjusted_yield * 100 | number:2}}%</td>
             <td>{{stock.years_div_growth | number:1}}</td>
             <td>{{stock.company_name}}</td>
             <td>{{stock.sector}}</td>
             <td>{{stock.industry}}</td>
             <td>{{stock.year_low | currency}}</td>
             <td>{{stock.year_high | currency}}</td>
-            <td>{{stock.eps | currency}}</td>
-            <td></td>
-            <td></td>
-            <td></td>
         </tr>
       </tbody>
     </table>
