--- a/HTML/dividendscout.html
+++ b/HTML/dividendscout.html
@@ -89,6 +89,7 @@
             <th>Payout</th>
             <th>Adj Div</th>
             <th>Adj Yield</th>
+            <th>Div Grw</th>
             <th>Yrs Div Gr</th>
             <th>Name</th>
             <th>Sector</th>
@@ -107,6 +108,7 @@
             <td data-ng-class="{red: stock.payout_ratio > 0.6, black: stock.payout_ratio <= 0.6}">{{stock.payout_ratio * 100.0  | number:0}}%</td>
             <td>{{stock.adjusted_div | currency}}</td>
             <td>{{stock.adjusted_yield * 100 | number:2}}%</td>
+            <td>{{stock.recent_div_growth * 100 | number:1}}%</td>
             <td>{{stock.years_div_growth | number:1}}</td>
             <td>{{stock.company_name}}</td>
             <td>{{stock.sector}}</td>
