--- a/HTML/dividendscout.html
+++ b/HTML/dividendscout.html
@@ -96,6 +96,9 @@
             <th>Industry</th>
             <th>Low</th>
             <th>High</th>
+            <th>Project Grw</th>
+            <th>Project Div</th>
+            <th>Project Rate</th>
             <th>Target</th>
         </tr>
       </thead>
@@ -108,7 +111,7 @@
             <td>{{stock.years_div_growth | number:1}}</td>
             <td>{{stock.recent_div_growth * 100 | number:1}}%</td>
             <td>{{stock.eps | currency}}</td>
-            <td data-ng-class="{red: stock.payout_ratio > 0.6, black: stock.payout_ratio <= 0.6}">{{stock.payout_ratio * 100.0  | number:0}}%</td>
+            <td data-ng-style="set_payout_color(stock.payout_ratio)">{{stock.payout_ratio * 100.0  | number:0}}%</td>  <!--{red: stock.payout_ratio > 0.6, black: stock.payout_ratio <= 0.6}">{{stock.payout_ratio * 100.0  | number:0}}%</td>-->
             <td>{{stock.adjusted_div | currency}}</td>
             <td>{{stock.adjusted_yield * 100 | number:2}}%</td>
             <td>{{stock.company_name}}</td>
@@ -116,9 +119,10 @@
             <td>{{stock.industry}}</td>
             <td>{{stock.year_low | currency}}</td>
             <td>{{stock.year_high | currency}}</td>
-            <td data-ng-class="{darkgreen: stock.percent_to_target == 0.0, green: stock.percent_to_target <= 0.05 && stock.percent_to_target > 0.0,
-                yellowgreen: stock.percent_to_target <= 0.1 && stock.percent_to_target > 0.05, yellow: stock.percent_to_target <= 0.2 && stock.percent_to_target > 0.1,
-                black: stock.percent_to_target > 0.2}">{{stock.target_price | currency}}</td>
+            <td>{{stock.projected_growth *100 | number:2}}%</td>
+            <td>{{stock.projected_div_adj | currency}}</td>
+            <td>{{stock.projected_rate_adj * 100 | number:2}}%</td>
+            <td data-ng-style="set_target_color(stock.percent_to_target)">{{stock.target_price | currency}}</td>
         </tr>
       </tbody>
     </table>
