Detail screen now passes id for stock

--- a/HTML/StockDetail.html
+++ b/HTML/StockDetail.html
@@ -1,1 +1,3 @@
-<p>Hello World!</p>
+<div class="row" data-ng-controller="StockDetailController as detailData">
+    <p>Hello World! {{detailData.id}}</p>
+</div>
