--- a/HTML/SNPList.html
+++ b/HTML/SNPList.html
@@ -1,5 +1,5 @@
 
-<div class="row" data-ng-controller="DivendScoutController as divdata">
+<div class="row" data-ng-controller="DividendScoutController as divdata">
     <div class="col-md-10 table-responsive">
     <table class="table-condensed table table-striped table-bordered table-hover">
       <thead>
